[package]
name = "oxidized-philosophy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
quick-xml = { version = "0.31.0", features = ["serialize"] }
ratatui = "0.25.0"
reqwest = { version = "0.11.23", features = ["blocking"] }
serde = { version = "1.0.195", features = ["derive"] }

[profile.release]
strip = true
lto = true
panic = "abort"
